--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <h4>Public Sale</h4>
                             <p class="ml-4">Further Notice</p>
                         </div>
-                        <a href="#" class="default-btn"><span>Coming soon</span></a>
+                        <a href="minting.html" class="default-btn"><span>Coming soon</span></a>
                     </div>
 
                 </div>
