--- a/index.html
+++ b/index.html
@@ -668,10 +668,11 @@
                             <div class="project__item2-inner">
 
                                 <!-- project name -->
-                                <div class="project__item2-name">
+                                <div class="project__item2-name justify-content-center">
                                     <div class="project__item2-thumb">
                                         <img src="assets/images/igo/author/tigers.png" alt="Project Image">
                                     </div>
+                                    <h4>vs</h4>
                                     <div class="project__item2-thumb">
                                         <img src="assets/images/igo/author/dinos.png" alt="Project Image">
                                     </div>
@@ -700,10 +701,11 @@
                             <div class="project__item2-inner">
 
                                 <!-- project name -->
-                                <div class="project__item2-name">
+                                <div class="project__item2-name justify-content-center">
                                     <div class="project__item2-thumb">
                                         <img src="assets/images/igo/author/twins.png" alt="Project Image">
                                     </div>
+                                    <h4>vs</h4>
                                     <div class="project__item2-thumb">
                                         <img src="assets/images/igo/author/eagles.png" alt="Project Image">
                                     </div>
@@ -732,10 +734,11 @@
                             <div class="project__item2-inner">
 
                                 <!-- project name -->
-                                <div class="project__item2-name">
+                                <div class="project__item2-name justify-content-center">
                                     <div class="project__item2-thumb">
                                         <img src="assets/images/igo/author/wiz.png" alt="Project Image">
                                     </div>
+                                    <h4>vs</h4>
                                     <div class="project__item2-thumb">
                                         <img src="assets/images/igo/author/landers.png" alt="Project Image">
                                     </div>
