--- a/index.html
+++ b/index.html
@@ -663,102 +663,105 @@
 </p>
                     </div>
                     <div class="col-12">
-                        <div class="project__item2 position-relative aos-init" data-aos="fade-up"
-                            data-aos-duration="300">
-                            <div class="project__item2-inner">
+                        <div class="project__item2 position-relative aos-init" data-aos="fade-up" data-aos-duration="300">
+                            <a href="dugout.html" target="_blank">
+                                <div class="project__item2-inner">
 
-                                <!-- project name -->
-                                <div class="project__item2-name justify-content-center">
-                                    <div class="project__item2-thumb">
-                                        <img src="assets/images/igo/author/tigers.png" alt="Project Image">
+                                    <!-- project name -->
+                                    <div class="project__item2-name justify-content-center">
+                                        <div class="project__item2-thumb">
+                                            <img src="assets/images/igo/author/tigers.png" alt="Project Image">
+                                        </div>
+                                        <h4>vs</h4>
+                                        <div class="project__item2-thumb">
+                                            <img src="assets/images/igo/author/dinos.png" alt="Project Image">
+                                        </div>
+                                        <div class="project__item2-content">
+                                            <h4>Tigers vs Dinos</h4>
+                                        </div>
                                     </div>
-                                    <h4>vs</h4>
-                                    <div class="project__item2-thumb">
-                                        <img src="assets/images/igo/author/dinos.png" alt="Project Image">
+                                    <div class="project__item-amount">
+                                        <p>Entries</p>
+                                        <h6><span class="color--theme-color">574,197</span></h6>
                                     </div>
-                                    <div class="project__item2-content">
-                                        <h4>Tigers vs Dinos</h4>
+                                    <div class="project__item-amount">
+                                        <p>Multi</p>
+                                        <h6>75</h6>
+                                    </div>
+                                    <div class="project__item-amount">
+                                        <p>Match Day</p>
+                                        <h6><span class="color--yellow-color">7 Oct 2022 18:24</span></h6>
                                     </div>
                                 </div>
-                                <div class="project__item-amount">
-                                    <p>Entries</p>
-                                    <h6><span class="color--theme-color">574,197</span></h6>
-                                </div>
-                                <div class="project__item-amount">
-                                    <p>Multi</p>
-                                    <h6>75</h6>
-                                </div>
-                                <div class="project__item-amount">
-                                    <p>Match Day</p>
-                                    <h6><span class="color--yellow-color">7 Oct 2022 18:24</span></h6>
-                                </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-12">
-                        <div class="project__item2 position-relative aos-init" data-aos="fade-up"
-                            data-aos-duration="300">
-                            <div class="project__item2-inner">
+                        <div class="project__item2 position-relative aos-init" data-aos="fade-up" data-aos-duration="300">
+                            <a href="dugout.html" target="_blank">
+                                <div class="project__item2-inner">
 
-                                <!-- project name -->
-                                <div class="project__item2-name justify-content-center">
-                                    <div class="project__item2-thumb">
-                                        <img src="assets/images/igo/author/twins.png" alt="Project Image">
+                                    <!-- project name -->
+                                    <div class="project__item2-name justify-content-center">
+                                        <div class="project__item2-thumb">
+                                            <img src="assets/images/igo/author/twins.png" alt="Project Image">
+                                        </div>
+                                        <h4>vs</h4>
+                                        <div class="project__item2-thumb">
+                                            <img src="assets/images/igo/author/eagles.png" alt="Project Image">
+                                        </div>
+                                        <div class="project__item2-content">
+                                            <h4>Twins vs Eagles</h4>
+                                        </div>
                                     </div>
-                                    <h4>vs</h4>
-                                    <div class="project__item2-thumb">
-                                        <img src="assets/images/igo/author/eagles.png" alt="Project Image">
+                                    <div class="project__item-amount">
+                                        <p>Entries</p>
+                                        <h6><span class="color--theme-color">574,197</span></h6>
                                     </div>
-                                    <div class="project__item2-content">
-                                        <h4>Twins vs Eagles</h4>
+                                    <div class="project__item-amount">
+                                        <p>Multi</p>
+                                        <h6>75</h6>
+                                    </div>
+                                    <div class="project__item-amount">
+                                        <p>Match Day</p>
+                                        <h6><span class="color--yellow-color">7 Oct 2022 18:24</span></h6>
                                     </div>
                                 </div>
-                                <div class="project__item-amount">
-                                    <p>Entries</p>
-                                    <h6><span class="color--theme-color">574,197</span></h6>
-                                </div>
-                                <div class="project__item-amount">
-                                    <p>Multi</p>
-                                    <h6>75</h6>
-                                </div>
-                                <div class="project__item-amount">
-                                    <p>Match Day</p>
-                                    <h6><span class="color--yellow-color">7 Oct 2022 18:24</span></h6>
-                                </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-12">
-                        <div class="project__item2 position-relative aos-init" data-aos="fade-up"
-                            data-aos-duration="300">
-                            <div class="project__item2-inner">
+                        <div class="project__item2 position-relative aos-init" data-aos="fade-up" data-aos-duration="300">
+                            <a href="dugout.html" target="_blank">
+                                <div class="project__item2-inner">
 
-                                <!-- project name -->
-                                <div class="project__item2-name justify-content-center">
-                                    <div class="project__item2-thumb">
-                                        <img src="assets/images/igo/author/wiz.png" alt="Project Image">
+                                    <!-- project name -->
+                                    <div class="project__item2-name justify-content-center">
+                                        <div class="project__item2-thumb">
+                                            <img src="assets/images/igo/author/wiz.png" alt="Project Image">
+                                        </div>
+                                        <h4>vs</h4>
+                                        <div class="project__item2-thumb">
+                                            <img src="assets/images/igo/author/landers.png" alt="Project Image">
+                                        </div>
+                                        <div class="project__item2-content">
+                                            <h4>Wiz vs Landers</h4>
+                                        </div>
                                     </div>
-                                    <h4>vs</h4>
-                                    <div class="project__item2-thumb">
-                                        <img src="assets/images/igo/author/landers.png" alt="Project Image">
+                                    <div class="project__item-amount">
+                                        <p>Entries</p>
+                                        <h6><span class="color--theme-color">574,197</span></h6>
                                     </div>
-                                    <div class="project__item2-content">
-                                        <h4>Wiz vs Landers</h4>
+                                    <div class="project__item-amount">
+                                        <p>Multi</p>
+                                        <h6>75</h6>
+                                    </div>
+                                    <div class="project__item-amount">
+                                        <p>Match Day</p>
+                                        <h6><span class="color--yellow-color">7 Oct 2022 18:24</span></h6>
                                     </div>
                                 </div>
-                                <div class="project__item-amount">
-                                    <p>Entries</p>
-                                    <h6><span class="color--theme-color">574,197</span></h6>
-                                </div>
-                                <div class="project__item-amount">
-                                    <p>Multi</p>
-                                    <h6>75</h6>
-                                </div>
-                                <div class="project__item-amount">
-                                    <p>Match Day</p>
-                                    <h6><span class="color--yellow-color">7 Oct 2022 18:24</span></h6>
-                                </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
