--- a/minting.html
+++ b/minting.html
@@ -45,7 +45,7 @@
                 <div class="header-primary d-flex flex-wrap justify-content-between align-items-center">
                     <div class="brand-logo d-none d-lg-inline-block">
                         <div class="logo">
-                            <a href="index.html">
+                            <a href="index.html" target="_blank">
                                 <img src="assets/images/logo/logo.png" alt="logo">
                             </a>
                         </div>
