--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+
     <!-- Primary Meta Tags -->
     <title>Dugout Fantasy</title>
-    <meta name="title" content="Torkgo — Web 3 Metaverse IGO , IDO  Launchpad  HTML Template">
+    <meta name="title" content="Dugout Fantasy">
     <meta name="description"
-        content="Torkgo is a Web 3 Metaverse IGO , IDO  Launchpad  HTML Template by Theme Tork. It is suitable for any kind of IGO,IDO,INO and Metaverse Launchpad. ">
+        content="Dugout Fantasy - BUILD YOUR FANTASY ROSTER">
+
 
     <!-- favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
