--- a/index.html
+++ b/index.html
@@ -881,13 +881,14 @@
                                         <h4>7 Feb 2023</h4>
                                         <p>05</p>
                                     </div>
-                                    <h4>Batting helmet Sale</h4>
+                                    <h4>Batting Helmet Sale</h4>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="roadmap__item2 ms-md-4  aos-init" data-aos="fade-left" data-aos-duration="800">
+                        <div class="roadmap__item2 ms-auto me-md-4  aos-init" data-aos="fade-right"
+                            data-aos-duration="800">
                             <div class="roadmap__item2-inner">
                                 <div class="roadmap__item2-content">
                                     <div class="roadmap__item2-header">
@@ -901,8 +902,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 offset-md-6">
-                        <div class="roadmap__item2 ms-auto me-md-4  aos-init" data-aos="fade-right"
-                            data-aos-duration="800">
+                        <div class="roadmap__item2 ms-md-4  aos-init" data-aos="fade-left" data-aos-duration="800">
                             <div class="roadmap__item2-inner">
                                 <div class="roadmap__item2-content">
                                     <div class="roadmap__item2-header">
@@ -915,7 +915,8 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="roadmap__item2 ms-md-4  aos-init" data-aos="fade-left" data-aos-duration="800">
+                        <div class="roadmap__item2 ms-auto me-md-4  aos-init" data-aos="fade-right"
+                            data-aos-duration="800">
                             <div class="roadmap__item2-inner">
                                 <div class="roadmap__item2-content">
                                     <div class="roadmap__item2-header">
@@ -928,8 +929,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 offset-md-6">
-                        <div class="roadmap__item2 ms-auto me-md-4  aos-init" data-aos="fade-right"
-                            data-aos-duration="800">
+                        <div class="roadmap__item2 ms-md-4  aos-init" data-aos="fade-left" data-aos-duration="800">
                             <div class="roadmap__item2-inner">
                                 <div class="roadmap__item2-content">
                                     <div class="roadmap__item2-header">
@@ -942,7 +942,8 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="roadmap__item2 ms-md-4  aos-init" data-aos="fade-left" data-aos-duration="800">
+                        <div class="roadmap__item2 ms-auto me-md-4  aos-init" data-aos="fade-right"
+                            data-aos-duration="800">
                             <div class="roadmap__item2-inner">
                                 <div class="roadmap__item2-content">
                                     <div class="roadmap__item2-header">
