--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                                             <img src="assets/images/igo/author/dinos.png" alt="Project Image">
                                         </div>
                                         <div class="project__item2-content">
-                                            <h4>Tigers vs Dinos</h4>
+                                            <h4>Gwangju vs Changwon</h4>
                                         </div>
                                     </div>
                                     <div class="project__item-amount">
@@ -713,7 +713,7 @@
                                             <img src="assets/images/igo/author/eagles.png" alt="Project Image">
                                         </div>
                                         <div class="project__item2-content">
-                                            <h4>Twins vs Eagles</h4>
+                                            <h4>Seoul vs Daejeon</h4>
                                         </div>
                                     </div>
                                     <div class="project__item-amount">
@@ -747,7 +747,7 @@
                                             <img src="assets/images/igo/author/landers.png" alt="Project Image">
                                         </div>
                                         <div class="project__item2-content">
-                                            <h4>Wiz vs Landers</h4>
+                                            <h4>Suwon vs Incheon</h4>
                                         </div>
                                     </div>
                                     <div class="project__item-amount">
