--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                                                 </li>
                                                 <li class="project__infolist-item">
                                                     <p class="project__infolist-name">Agency</p>
-                                                    <p class="project__infolist-data">Changwon Dinos</p>
+                                                    <p class="project__infolist-data">CHANGWON Dinos</p>
                                                 </li>
                                                 <li class="project__infolist-item">
                                                     <p class="project__infolist-name">Position</p>
